<resources>
    <string name="app_name">EduGain</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="update_password"><u>Update Password</u></string>
    <string name="get_detailed_report"><u>Get Detailed Report</u></string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="grades">Grades</string>

    <string name="title_activity_teacher_login">TeacherLogin</string>

    <string name="menu_home">Home</string>
    <string name="student_attendance">Attendance Report</string>
    <string name="student_view_courses">View Registered Courses</string>
    <string name="student_register_courses">Register Course</string>
    <string name="student_unregister_courses">UnRegister Course</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_stud_login">StudLogin</string>
    <string name="title_activity_admin_student_panel">AdminStudentPanel</string>
    <string name="title_activity_admin_instructor_panel">AdminInstructorPanel</string>
    <string name="title_activity_admin_tool_panel">AdminToolPanel</string>

</resources>
