<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/logo"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_student_attendance"
            android:icon="@drawable/attendance80"
            android:title="@string/student_attendance" />
        <item
            android:id="@+id/nav_student_grades"
            android:icon="@drawable/grades80"
            android:title="@string/grades"/>
        <item
            android:id="@+id/nav_update_details"
            android:title="Update Details"/>

        <item android:title="Courses">
            <menu>
                <item
                    android:id="@+id/nav_student_viewCourse"
                    android:title="@string/student_view_courses" />
                <item
                    android:id="@+id/nav_student_register"
                    android:title="@string/student_register_courses"/>
                <item
                    android:id="@+id/nav_student_unregister"
                    android:title="@string/student_unregister_courses"/>
            </menu>
        </item>
    </group>
</menu>
